--- a/web/src/components/Board/Board.module.css
+++ b/web/src/components/Board/Board.module.css
@@ -1,11 +1,12 @@
 .board {
     width: 100%;
     max-width: 30rem;
-    background-color: rgb(20, 20, 22);
+    background-color: rgb(18, 18, 39);
     height: 30rem;
-    /* max-height: 100%; */
+    max-height: 100%;
     margin: 4rem auto;
     border-collapse: separate;
-    border: 3px solid rgb(128, 66, 17);
+    border: 3px solid rgb(109, 44, 170);
     border-radius: 1rem;
+    table-layout: fixed;
 }
