--- a/web/src/components/UI/Button.module.css
+++ b/web/src/components/UI/Button.module.css
@@ -1,16 +1,20 @@
 .button {
-    background-color: rgb(241, 209, 204);
-    color:rgb(138, 35, 35);
+    background-color: rgb(160, 121, 115);
+    color:rgb(47, 23, 23);
     font-size: 1.1rem;
     font-weight: 600;
     padding: 0.9rem 3rem;
     margin: 35vh auto;
-    border: 1px solid rgb(133, 96, 91);
+    border: 1px solid rgb(47, 23, 23);
     border-radius: 1.3rem;
     box-shadow: 0 0 5px 0px rgb(241, 209, 204);
+
     
 }
 
 .button:hover {
+    background-color: rgb(236, 190, 183);
+    border: 1px solid rgb(133, 101, 101);
     box-shadow: 0 0 5px 1px rgb(241, 209, 204);
+    cursor: pointer;
 }
