--- a/web/src/components/Board/Cell.module.css
+++ b/web/src/components/Board/Cell.module.css
@@ -5,7 +5,8 @@
     border-radius: 1rem;
     box-shadow: 0 0 10px 0 rgb(24, 41, 82);
     width: 100px;
-    height:100px
+    height:100px;
+    font-size: 42px;
 }
 
 .cell:hover {
