--- a/web/src/components/Board/Cell.module.css
+++ b/web/src/components/Board/Cell.module.css
@@ -1,16 +1,15 @@
 .cell {
-    background-color: rgb(64, 82, 116);
-    text-align: center;
-    border: 1px solid rgb(109, 44, 170);
-    border-radius: 1rem;
-    box-shadow: 0 0 10px 0 rgb(24, 41, 82);
-    width: 100px;
-    height:100px;
-    font-size: 42px;
+  background-color: #e3edf7;
+  text-align: center;
+  border-radius: 35px;
+  box-shadow: inset -3px -3px 7px #ffffff,
+    inset 3px 3px 7px rgba(136, 165, 191, 0.48);
+  width: 100px;
+  height: 100px;
+  font-size: 42px;
 }
 
 .cell:hover {
-    cursor: pointer;
-    background-color: rgb(92, 109, 141);
-
+  cursor: pointer;
+  background-color: rgb(196, 205, 224);
 }
