--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,6 +1,6 @@
 html {
   margin: 0;
-  background-color: #1f1f1f;
+  background-color: rgba(235, 242, 249, 1);
 }
 
 body {
@@ -9,6 +9,6 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
