--- a/web/src/components/Board/Cell.module.css
+++ b/web/src/components/Board/Cell.module.css
@@ -1,15 +1,20 @@
 .cell {
+  background-image: url("../../Icons/board/default-cell.svg");
+  background-repeat: no-repeat;
+  background-position: center;
   background-color: #e3edf7;
   text-align: center;
+  align-self: center;
   border-radius: 35px;
   box-shadow: inset -3px -3px 7px #ffffff,
     inset 3px 3px 7px rgba(136, 165, 191, 0.48);
   width: 100px;
   height: 100px;
   font-size: 42px;
+  cursor: pointer;
 }
 
 .cell:hover {
-  cursor: pointer;
-  background-color: rgb(196, 205, 224);
+  background-image: url("../../Icons/board/hover-cell.svg");
+  transition: background-image 0.2s;
 }
