--- a/web/src/components/Nav/NavScore.module.css
+++ b/web/src/components/Nav/NavScore.module.css
@@ -1,12 +1,24 @@
 .scores {
   display: flex;
-  justify-content: space-around;
-  background-color: bisque;
+  justify-content: space-between;
+  background-color: #e3edf7;
   margin-top: 1rem;
+  padding: 0.8rem 1.5rem;
+  border-radius: 15px;
+  box-shadow: -5px -5px 15px rgba(255, 255, 255, 0.952),
+    2px 4px 5px rgba(75, 85, 93, 0.472);
 }
 
 .score {
-  width: 3rem;
+  width: 7rem;
+  height: 38px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  border-right: 1px solid rgb(172, 171, 171);
+  padding-right: 20px;
+}
+
+.score:last-child {
+  border-right: none;
+  padding-right: 0;
 }
