--- a/web/src/components/Nav/NavScore.module.css
+++ b/web/src/components/Nav/NavScore.module.css
@@ -9,6 +9,10 @@
     2px 4px 5px rgba(75, 85, 93, 0.472);
 }
 
+.score:hover .player {
+  visibility: visible;
+}
+
 .score {
   width: 7rem;
   height: 38px;
@@ -16,6 +20,15 @@
   justify-content: space-around;
   border-right: 1px solid rgb(172, 171, 171);
   padding-right: 20px;
+  position: relative;
+}
+
+.player {
+  position: absolute;
+  left: 50%;
+  top: 100%;
+  transform: translateX(-50%);
+  visibility: hidden;
 }
 
 .score:last-child {
