--- a/web/src/components/Nav/NavScore.module.css
+++ b/web/src/components/Nav/NavScore.module.css
@@ -7,10 +7,7 @@
   border-radius: 15px;
   box-shadow: -5px -5px 15px rgba(255, 255, 255, 0.952),
     2px 4px 5px rgba(75, 85, 93, 0.472);
-}
-
-.score:hover .player {
-  visibility: visible;
+  position: relative;
 }
 
 .score {
@@ -20,18 +17,26 @@
   justify-content: space-around;
   border-right: 1px solid rgb(172, 171, 171);
   padding-right: 20px;
-  position: relative;
-}
-
-.player {
-  position: absolute;
-  left: 50%;
-  top: 100%;
-  transform: translateX(-50%);
-  visibility: hidden;
+  /* position: relative; */
 }
 
 .score:last-child {
   border-right: none;
   padding-right: 0;
+}
+
+.score:hover .tooltip {
+  visibility: visible;
+}
+
+.tooltip {
+  position: absolute;
+  right: 100%;
+  top: 30%;
+  margin: 0 0.5rem;
+  visibility: hidden;
+}
+
+.score:last-child .tooltip {
+  left: 100%;
 }
