--- a/web/src/components/Nav/NavOption.module.css
+++ b/web/src/components/Nav/NavOption.module.css
@@ -1,6 +1,8 @@
 .options {
   height: 100%;
   max-height: 10rem;
+  font-family: "Lato", sans-serif;
+  color: #31456a;
 }
 
 .options Button {
@@ -13,12 +15,28 @@ p {
   font-weight: 700;
 }
 
-.actions.uiMode Button {
-  background-image: url("../../assets/nav-option/lightMode.svg");
+.actions Button {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 25px;
 }
 
-.actions.sound Button {
+.darkMode Button {
+  background-image: url("../../assets/nav-option/darkMode.svg");
+  background-size: 50%;
+}
+
+.lightMode Button {
+  background-image: url("../../assets/nav-option/lightMode.svg");
+  background-size: 50%;
+}
+
+.soundOn Button {
   background-image: url("../../assets/nav-option/soundOn.svg");
+}
+
+.soundOff Button {
+  background-image: url("../../assets/nav-option/soundOff.svg");
 }
 
 .actions.fullscreen Button {
@@ -27,10 +45,4 @@ p {
 
 .actions.resign Button {
   background-image: url("../../assets/nav-option/resign.svg");
-}
-
-.actions Button {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 25px;
 }
