--- a/web/src/components/Nav/NavScore.module.css
+++ b/web/src/components/Nav/NavScore.module.css
@@ -1,4 +1,7 @@
 .scores {
+  font-family: "Share Tech Mono", monospace;
+  text-shadow: -1px -1px 2px #ffffff, 1px 1px 2px rgba(20, 44, 73, 0.38);
+
   display: flex;
   justify-content: space-between;
   background-color: #e3edf7;
@@ -31,12 +34,12 @@
 
 .tooltip {
   position: absolute;
-  right: 100%;
-  top: 30%;
+  top: 120%;
+  right: 83.5%;
   margin: 0 0.5rem;
   visibility: hidden;
 }
 
 .score:last-child .tooltip {
-  left: 100%;
+  left: 70%;
 }
