--- a/web/src/components/Nav/NavScore.module.css
+++ b/web/src/components/Nav/NavScore.module.css
@@ -20,7 +20,6 @@
   justify-content: space-around;
   border-right: 1px solid rgb(172, 171, 171);
   padding-right: 20px;
-  /* position: relative; */
 }
 
 .score:last-child {
@@ -35,11 +34,10 @@
 .tooltip {
   position: absolute;
   top: 120%;
-  right: 83.5%;
+
   margin: 0 0.5rem;
   visibility: hidden;
 }
 
-.score:last-child .tooltip {
-  left: 70%;
-}
+/* .score:last-child .tooltip {
+} */
