--- a/web/src/components/UI/Modal.module.css
+++ b/web/src/components/UI/Modal.module.css
@@ -5,19 +5,15 @@
   width: 100%;
   height: 100vh;
   z-index: 20;
-  background-color: rgba(0, 0, 0, 0.746);
+  background-color: rgba(0, 0, 0, 0.596);
+  backdrop-filter: blur(3px);
 }
 
 .modal {
   position: fixed;
-  top: 20vh;
-  left: 38%;
-  width: 30%;
-  min-width: 300px;
-  height: 200px;
-  background-color: #ebf2f9;
-  padding: 1rem;
-  border-radius: 30px;
-  border: 1px solid #bdc0c3;
+  top: 30vh;
+  left: 37%;
+  right: 37%;
   z-index: 30;
+  border-radius: 16px;
 }
