--- a/web/src/components/Board/Board.module.css
+++ b/web/src/components/Board/Board.module.css
@@ -1,10 +1,8 @@
 .board {
   width: 100%;
   max-width: 30rem;
-  background: linear-gradient(210.55deg, #ebf2f9 19.14%, #c6d7eb 154.68%);
-  box-shadow: -16px -16px 40px rgba(255, 255, 255, 0.8),
-    16px 4px 64px rgba(18, 61, 101, 0.3),
-    inset -8px -6px 80px rgba(255, 255, 255, 0.18);
+  background: var(--background-color-4);
+  box-shadow: var(--box-shadow-3);
   height: 30rem;
   max-height: 100%;
   /* margin: 4rem auto;  */
