--- a/web/src/components/UI/Card.module.css
+++ b/web/src/components/UI/Card.module.css
@@ -1,14 +1,5 @@
 .card {
-  background: linear-gradient(
-      200deg,
-      rgb(255, 255, 255),
-      rgba(255, 0, 0, 0) 100%
-    ),
-    linear-gradient(
-      300deg,
-      rgba(154, 167, 182, 0.959),
-      rgba(142, 148, 142, 0) 60%
-    );
+  background: var(--background-color-6);
   width: 100%;
   max-width: 30.1rem;
   display: flex;
