--- a/web/src/theme.css
+++ b/web/src/theme.css
@@ -1,15 +1,54 @@
 :root {
   --var1: #fff;
+  --cell-hover: url("../src/assets/board/cell-hover.svg"),
+    var(--background-color-3);
+  /* bg */
   --background-color-1: linear-gradient(0deg, #e3edf7, #e3edf7);
   --background-color-2: linear-gradient(0deg, #e3edf7, #e3edf7);
+  --background-color-3: linear-gradient(0deg, #ebf3fa, #ebf3fa);
+  --background-color-4: linear-gradient(
+    210.55deg,
+    #ebf2f9 19.14%,
+    #c6d7eb 154.68%
+  );
+  --background-color-5: linear-gradient(
+    0deg,
+    rgba(235, 242, 249, 1),
+    rgba(235, 242, 249, 1)
+  );
+
+  --background-color-6: linear-gradient(
+      200deg,
+      rgb(255, 255, 255),
+      rgba(255, 0, 0, 0) 100%
+    ),
+    linear-gradient(
+      300deg,
+      rgba(154, 167, 182, 0.959),
+      rgba(142, 148, 142, 0) 60%
+    );
+
+  /* colors */
   --color-1: #31456a;
 
   --box-shadow-1: inset -3px -3px 7px #ffffff,
     inset 2px 2px 5px rgba(136, 165, 191, 0.38);
+  --box-shadow-2: inset -3px -3px 7px #ffffff,
+    inset 3px 3px 7px rgba(136, 165, 191, 0.48);
+  --box-shadow-3: -16px -16px 40px rgba(255, 255, 255, 0.8),
+    16px 4px 64px rgba(18, 61, 101, 0.3),
+    inset -8px -6px 80px rgba(255, 255, 255, 0.18);
+
+  /* icons-light */
+  --icon-login: url("../src/assets/icons/Login.svg");
+  --icon-cell-default: url("../src/assets/board/cell-default.svg");
 }
 
 [data-theme="dark"] {
   --var1: #000;
+  --cell-hover: url("../src/assets/board/cell-hover.svg"),
+    var(--background-color-3);
+
   /* background-colors */
   --background-color-1: linear-gradient(
     144.05deg,
@@ -23,9 +62,46 @@
     #1c1e22 50%,
     #121416 200%
   );
+
+  --background-color-3: linear-gradient(
+    319.4deg,
+    rgba(44, 51, 58, 0.4) -20%,
+    rgba(18, 20, 22, 0.4) 57.68%,
+    rgba(19, 21, 23, 0.4) 57.68%
+  );
+
+  --background-color-4: linear-gradient(
+    151.6deg,
+    #353a40 -6.09%,
+    #121416 87.57%
+  );
+
+  --background-color-5: linear-gradient(
+    169.29deg,
+    #262b2f -0.68%,
+    #16191d 74.03%
+  );
+
+  --background-color-6: linear-gradient(
+    244.98deg,
+    rgba(80, 89, 98, 0.4) 11.49%,
+    rgba(0, 0, 0, 0) 53.04%,
+    rgba(0, 0, 0, 0.4) 100%
+  );
+
   /* colors */
   --color-1: #ffffff;
+
   /* box-shadows */
   --box-shadow-1: inset -2px -2px 10px rgba(255, 255, 255, 0.05),
     inset 2px 3px 10px #070709;
+  --box-shadow-2: inset -3px -3px 7px rgba(255, 255, 255, 0.04),
+    inset 3px 3px 7px rgba(7, 7, 9, 0.5);
+  --box-shadow-3: 36px 12px 64px rgba(2, 3, 3, 0.7),
+    -12px -20px 56px rgba(232, 237, 243, 0.05),
+    inset -16px -6px 80px rgba(248, 249, 249, 0.03);
+
+  /* icons-light */
+  --icon-login: url("../src/assets/icons/login-dark.svg");
+  --icon-cell-default: url("../src/assets/board/cell-default-dark.svg");
 }
