--- a/web/src/components/UI/Modal.module.css
+++ b/web/src/components/UI/Modal.module.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100vh;
   z-index: 20;
-  background-color: rgba(0, 0, 0, 0.596);
+  background-color: var(--backdrop-color);
   backdrop-filter: blur(3px);
 }
 
