--- a/web/src/components/Nav/NavScore.module.css
+++ b/web/src/components/Nav/NavScore.module.css
@@ -1,17 +1,13 @@
 .scores {
   font-family: "Share Tech Mono", monospace;
   text-shadow: var(--text-shadow-1);
-  /* dark: text-shadow: -1px -1px 2px rgba(255, 255, 255, 0.1), 1px 1px 3px #1E2226; */
   display: flex;
   justify-content: space-between;
-  /* align-items: center; */
-  /* background-color: #e3edf7; */
   background-image: var(--background-color-7);
   margin-top: 1rem;
   padding: 16px 32px;
   border-radius: 15px;
   box-shadow: var(--box-shadow-6);
-  /* box-shadow: -4px -2px 16px #ffffff, 4px 2px 12px rgba(136, 165, 191, 0.54); */
   position: relative;
 }
 
@@ -20,7 +16,6 @@
   height: 38px;
   display: flex;
   justify-content: space-around;
-  /* border: 0.5px solid ; */
   border-right: var(--score-border);
   padding-right: 20px;
   align-items: center;
@@ -38,10 +33,7 @@
 .tooltip {
   position: absolute;
   top: 120%;
-
+  color: var(--color-1);
   margin: 0 0.5rem;
   visibility: hidden;
 }
-
-/* .score:last-child .tooltip {
-} */
